# ChessBot

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp
include/: bitboards.hpp  board.hpp  evaluate.hpp  leapers.hpp  movedef.hpp  movegen.hpp  search.hpp  sliders.hpp  test_utils.hpp  transposition_table.hpp  types.hpp  uci.hpp  zobrist.hpp
include/details/: bitboards_inline.inl  board_inline.inl  leaper_inline.inl  movedef_inline.inl  movegen_inline.inl  pesto.inl  search_inline.inl  sliders_inline.inl  transposition_table_inline.inl  zobrist_inline.inl
include/details/move_generation_details/: movegen_kings.inl  movegen_knights.inl  movegen_pawns.inl  movegen_sliders.inl
scripts/: build.sh
src/: board.cpp  movedef.cpp  search.cpp  transposition_table.cpp  uci.cpp
tests/: test_bitboard.cpp  test_board.cpp  test_fen_util.cpp  test_knight_gen.cpp  test_leaper_attack_gen.cpp  test_main.cpp  test_movedef.cpp  test_pawn_gen.cpp  test_performance.cpp  test_search.cpp  test_slider_attack_gen.cpp
